feat: Add group setting
